@@ -3,6 +3,8 @@ Fri Mar  4 2005  Joe Allen <jhallen@world.std.com>
 	Add block evaluator and ? operator to math
 	(now it can loop via. recursion :-)
 
+	Add #if #else #endif matching.
+
 Thu Mar  3 2005  Joe Allen <jhallen@world.std.com>
 
 	New help screen for math.
